<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:id="@+id/home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="9">

        <TextView
            android:id="@+id/text_usuario"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/usuario_cabecera"/>

        <TextView
            android:id="@+id/text_sede"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/sede_cabecera"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/datos_generales"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/borde15"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_datos_generales"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1.2"
                android:src="@drawable/registrotrabajo" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:gravity="left|center"
                android:text="@string/datos_generales"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="42sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="12">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flechamenu" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calidad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/borde4"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_calidad"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1.2"
                android:src="@drawable/iconopresencia" />

            <TextView
                android:id="@+id/registropresenciatext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:gravity="left|center"
                android:text="@string/calidad"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="42sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flechamenu" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/estructura"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/borde15"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_estructura"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1.2"
                android:src="@drawable/jornadatrabajo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:gravity="left|center"
                android:text="@string/estructura"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="42sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="12">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flechamenu" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/procedimiento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/borde4"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_procedimiento"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1.2"
                android:src="@drawable/comunicacion" />

            <TextView
                android:id="@+id/comunicacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:gravity="left|center"
                android:text="@string/procedimientos"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="42sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="12">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flechamenu" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/configurar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/borde15"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1.2"
                android:src="@drawable/configuracion" />

            <TextView
                android:id="@+id/configuracion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:gravity="left|center"
                android:text="@string/configuracion"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="42sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="12">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flechamenu" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>